force-app/main/default/objects/Flight_Found__e/Flight_Found__e.object-meta.xml
<CustomObject>
    <label>Flight Found</label>
    <pluralLabel>Flights Found</pluralLabel>
</CustomObject>