force-app/main/default/objects/Flight_Found__e/fields/CMS_Content_Key__c.field-meta.xml
<CustomField>
    <fullName>CMS_Content_Key__c</fullName>
    <label>CMS Content Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>