force-app/main/default/objects/Flight_Found__e/fields/Destination_Code__c.field-meta.xml
<CustomField>
    <fullName>Destination_Code__c</fullName>
    <label>Destination Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>