force-app/main/default/objects/Flight_Found__e/fields/Flight_Id__c.field-meta.xml
<CustomField>
    <fullName>Flight_Id__c</fullName>
    <label>Flight Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>